change code font size and line height

--- a/_posts/2016-07-13-June 2016-meetup.md
+++ b/_posts/2016-07-13-June 2016-meetup.md
@@ -124,8 +124,7 @@ NB: `.cljc` suffix and source directory means the Clojure code in the file can e
 
 For instance, given the following deck (random) :
 
-```clojure
-(deck)
+{% highlight clojure %}(deck)
 =>
 ([:squiggle :green :3 :stripped]
  [:oval :red :2 :stripped]
@@ -139,16 +138,15 @@ For instance, given the following deck (random) :
  [:squiggle :purple :1 :stripped]
  [:oval :red :1 :stripped]
  [:diamond :red :1 :stripped])
-```
+{% endhighlight %}
  
 the result of applying the SETs function to the deck data structure gives back the two solution:
 
-```clojure
-(SETs (deck))
+{% highlight clojure %}(SETs (deck))
 =>
 (([:oval :purple :3 :stripped] [:squiggle :green :3 :solid] [:diamond :red :3 :outline])
  ([:squiggle :green :2 :solid] [:diamond :red :3 :outline] [:oval :purple :1 :stripped]))
-```
+{% endhighlight %}
 
 TODO: 
 
