refactoring a little bit the design of the blog

--- a/_posts/2016-07-13-June 2016-meetup.md
+++ b/_posts/2016-07-13-June 2016-meetup.md
@@ -20,32 +20,36 @@ We're used to have the meetup separated in two parts, either two talks or a talk
 [The SET game Kata explanation with some code is on github](https://github.com/jgrodziski/set-game), here is an extract of the Kata.
 
 # SET Game Kata
+
 The goal of the SET game is to identify a SET of 3 cards from 12 cards choosed randomly from the 81 cards and placed face up on the table. Each card has four features, which can vary as follows:
+
 ![Set Cards Examples](/resources/public/imgs/set-cards.png)
 
 A SET consists of 3 cards in which each of the card’s features, looked at one‐by‐one, are the same on each card, or, are different on each card. All of the features must separately satisfy this rule. In other words: shape must be either the same on all 3 cards, or different on each of the 3 cards; color must be either the same on all 3 cards, or different on each of the 3, etc. See EXAMPLES below.
 So all the cards are:
+
 ![All cards](/resources/public/imgs/all-cards.png) 
 
 ## A quick check ‐ Is it a SET?
+
 If 2 cards are the same and 1 card is different in any feature, then it is not a SET. For example, if 2 are red and 1 is purple then it is not a SET. A SET must be either all the same OR all different in each individual feature.
+
 ![Set or not](/resources/public/imgs/set-or-no-set.png)
 
 
 ## Examples
+
 For example, the following are SETs:
 
-* All three cards have the **same shape**, the **same color**, the **same number** of symbols and they all have **different shading**.
+All three cards have the **same shape**, the **same color**, the **same number** of symbols and they all have **different shading**.![Set example 1](/resources/public/imgs/set1.png)
 
-  ![Set example 1](/resources/public/imgs/set1.png)
-* All three cards have **different shapes**, **different colors**, and **different numbers** of symbols and they all have the **same shading**.
+All three cards have **different shapes**, **different colors**, and **different numbers** of symbols and they all have the **same shading**.![Set example 2](/resources/public/imgs/set2.png)
 
-  ![Set example 2](/resources/public/imgs/set2.png)
-* All three cards have **different shapes**, **different colors**, **different numbers** of symbols and **different shadings**.
-
-  ![Set example 3](/resources/public/imgs/set3.png)
+All three cards have **different shapes**, **different colors**, **different numbers** of symbols and **different shadings**.![Set example 3](/resources/public/imgs/set3.png)
 
 ## The play
+
+### Steps
 
 1. The dealer shuffles the cards and lays 12 of them face up on the table (in a rectangle) so that they can be seen by all. 
 2. Players identify and remove SETs of 3 cards from anywhere on the table. 
@@ -56,17 +60,18 @@ For example, the following are SETs:
 
 ### Rules
 
-* One point is given for each SET. High score wins.
-* A player must call SET before picking up the cards. 
-* There are no turns, the first player to call SET gets control of the board. 
-* After he/she has called SET, no other player can pick up cards until that player has finished. 
-* If all players agree that there is not a SET in the 12 cards, 3 more cards are laid face up on the table. The 3 cards are not replaced when the next SET is found, reducing the number back to 12. _Note_: There are ~ 33:1 odds that a SET is present in 12 cards, and ~ 2500:1 odds when 15 cards are on the table.
-    
-**Stunning Anecdote about the SET game** : 
+1. One point is given for each SET. High score wins.
+2. A player must call SET before picking up the cards. 
+3. There are no turns, the first player to call SET gets control of the board. 
+4. After he/she has called SET, no other player can pick up cards until that player has finished. 
+5. If all players agree that there is not a SET in the 12 cards, 3 more cards are laid face up on the table. The 3 cards are not replaced when the next SET is found, reducing the number back to 12. _Note_: There are ~ 33:1 odds that a SET is present in 12 cards, and ~ 2500:1 odds when 15 cards are on the table.
+
+
+### Stunning Anecdote about the SET game
 
 [https://www.quantamagazine.org/20160531-set-proof-stuns-mathematicians](https://www.quantamagazine.org/20160531-set-proof-stuns-mathematicians)
 
-> How big, one might wonder, is the largest collection of cards that contains no set? the answer is 20, proved in 1971 by the Italian mathematician Giuseppe Pellegrino. 
+> How big, one might wonder, is the largest collection of cards that contains no set? the answer is 20, proved in 1971 by the Italian mathematician Giuseppe Pellegrino.
 
 Recent math papers published in may 2016 defines an upper bound on how big a set can be with a variable number _n_ of attributes, leading to big advances in "polynomial method" field of mathematics. 
 
