--- a/_posts/2016-08-09-July-2016-meetup.md
+++ b/_posts/2016-08-09-July-2016-meetup.md
@@ -10,7 +10,7 @@ excerpt: A talk by Romeu Moura about Property-based Testing using clojure.spec m
 
 # Property-based testing with clojure.spec
 
-Clojure.spec was released recently [may 2016](http://clojure.org/news/2016/05/23/introducing-clojure-spec) and it was a perfect occasion to have [Romeu](https://twitter.com/malk_zameth) speaking about Property-based Testing using clojure.spec.
+Clojure.spec was [released recently in may 2016](http://clojure.org/news/2016/05/23/introducing-clojure-spec) and it was a perfect occasion to have [Romeu](https://twitter.com/malk_zameth) speaking about Property-based Testing using clojure.spec.
 
 The live coding session use the Bowling kata as a material, for those who wonder what that kata is here is a brief reminder:
 
@@ -29,7 +29,7 @@ A **strike** is when the player knocks down all 10 pins on his first try. The **
 
 In the **tenth frame** a player who rolls a spare or strike is allowed to roll the **extra balls** to complete the frame (so 3 balls can be rolled in tenth frame).
 
-## Video of the talk
+## Video of the meetup session
 
 Here is the video of the live coding session (in French):
 
