minor tweaks of the blog style, enhancement to the blog posts

--- a/_posts/2016-07-13-June 2016-meetup.md
+++ b/_posts/2016-07-13-June 2016-meetup.md
@@ -1,9 +1,11 @@
 ---
 layout: blog-single
-title: "Paris Clojure Meetup June 2016"
+title: "Bandsquare an application rebuilt with Clojure and Datomic - the SET Game Kata"
 author: Jérémie Grodziski
+author-url: http://www.grodziski.com
 tags: [clojure,meetup,datomic]
-permalink: /meetup-june-2016
+permalink: /meetup-june-2016-bandsquare-application-rebuilt-with-clojure-and-datomic
+alias: /meetup-june-2016
 comments: true
 excerpt: The meetup held a talk by Valentin Waeselynck about Clojure and Datomic and the usual workshop for beginners and Kata for more seasoned clojurists
 ---
@@ -159,7 +161,7 @@ TODO:
 
 ### A solution using Clojure.spec
 
-An amazing solution made by [Christophe Grand](https://twitter.com/cgrand) using [clojure.spec](http://clojure.org/about/spec): https://gist.github.com/cgrand/4985a7ef80c8c85291213437d06d9169
+An amazing solution made by [Christophe Grand](https://twitter.com/cgrand) using [clojure.spec](http://clojure.org/about/spec): [https://gist.github.com/cgrand/4985a7ef80c8c85291213437d06d9169](https://gist.github.com/cgrand/4985a7ef80c8c85291213437d06d9169)
 
 
 **Beware the SET game is copyrighted! the content is here for educational purpose only.**
