--- a/_posts/2016-08-09-July-2016-meetup.md
+++ b/_posts/2016-08-09-July-2016-meetup.md
@@ -1,9 +1,11 @@
 ---
 layout: blog-single
-title: "Paris Clojure Meetup July 2016"
+title: "Property-based testing with clojure.spec"
 author: Jérémie Grodziski
+author-url: http://www.grodziski.com
 tags: [clojure,meetup,clojurespec,propertybasedtesting]
-permalink: /meetup-july-2016
+permalink: /meetup-july-2016-property-based-testing-with-clojure-spec
+alias: /meetup-july-2016
 comments: true
 excerpt: A talk by Romeu Moura about Property-based Testing using clojure.spec made with the famous Bowling Kata
 ---
@@ -41,6 +43,6 @@ Here is the video of the live coding session (in French):
 
 ## Traditional Solutions to the Kata
 
-There is my own solution in [src/bowling.core.clj](https://github.com/jgrodziski/clojure-bowling-game/blob/master/src/bowling/core.clj), the one from [FlyingTof](https://twitter.com/devatsky) is [this repo](https://github.com/flyingtof/clojing) and the one from [Jon](https://twitter.com/ahoy_jon) and [Thomas](https://twitter.com/dikalikatao): [thomas-and-john-solution](https://github.com/jgrodziski/clojure-bowling-game/blob/master/thomas-and-john-solutions/src/bowling-game/core.clj).
+There is [my own solution](https://github.com/jgrodziski/clojure-bowling-game/blob/master/src/bowling/core.clj), the one from [FlyingTof](https://twitter.com/devatsky) in [this repo](https://github.com/flyingtof/clojing) and the one from [Jon](https://twitter.com/ahoy_jon) and [Thomas](https://twitter.com/dikalikatao): [thomas-and-john-solution](https://github.com/jgrodziski/clojure-bowling-game/blob/master/thomas-and-john-solutions/src/bowling-game/core.clj).
 
-[Hiram](https://twitter.com/HiramMadelaine) made [a graphical version of the Bowling Kata with devcards](https://github.com/hiram-madelaine/bowling-kata).
+[Hiram](https://twitter.com/HiramMadelaine) made [a great graphical version of the Bowling Kata with devcards](https://github.com/hiram-madelaine/bowling-kata).
